packages/jsii/test/negatives/neg.struct-hint-with-methods.ts
/**
 * Attempt to force a behavioral interface to be a struct...
 *
 * @struct
 */
export interface INotAStruct {
  method(): void;
}
